# PollyEnglish-server

./: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 00386555715c_subtitle_translation_jobs.py  029c19229b91_initial_schema_contents_explanations_.py  b7e2a1d9c4f3_unified_content_model.py  c3f8a4e1d2b6_stage3_quizzes_word_occurrences.py  ca2fe11c13e4_feedback_jobs_users_quota_pronunciation_.py
app/: config.py  db.py  db_bootstrap.py  main.py  models.py  quota.py  schemas.py  security.py  storage.py  taxonomy.py
app/api/: ai.py  articles.py  chat.py  contents.py  health.py  pronunciation.py  quizzes.py  subtitles.py  translations.py  words.py
app/services/: quality_scorer.py  subtitle_pipeline.py  translation_pipeline.py
deploy/: Caddyfile  polly-server.service
scripts/: backfill_thumbnails.py  build_word_index.py  demote_no_subtitle.py  fetch_internet_archive.py  fetch_mit_ocw.py  fetch_nasa.py  fetch_ted_channel.py  fetch_voa_learning_english.py  generate_quizzes.py  ingest.py  pregenerate_explanations.py  rebase_urls.py  score_existing.py  seed.py  seed_100.sh
scripts/article_pipeline/: README.md  article_ingest.py  classify_topics.py  derive_from_video.py  fetch_gutenberg.py  fetch_simple_wikipedia.py  fetch_wikinews.py  segment.py
scripts/cc_pipeline/: README.md  cc_channels_30.md  cefr_grader.py  download_videos.py  to_polly_fetch.py  translate_subtitles.py  yt_cc_scraper.py
scripts/sourcing_agent/: README.md  __init__.py  agent.py  connectors.py  judge.py  state.py
(+5 files in other folders)
