[project]
name = "polly-server"
version = "0.1.0"
description = "Polly backend MVP — content manifest API + OpenAI proxy"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy>=2.0",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "openai>=1.54",
    "httpx>=0.27",
    "python-multipart>=0.0.12",
    "slowapi>=0.1.9",
    "alembic>=1.13",
]

[project.optional-dependencies]
postgres = ["psycopg[binary]>=3.2"]
r2 = ["boto3>=1.35"]
redis = ["redis>=5.2"]
dev = ["ruff>=0.7", "pytest>=8.3"]
# CC 内容采集流水线：YouTube Data API + yt-dlp + CEFR 分级
# 用 `pip install -e ".[cc-pipeline]"` 安装。
cc-pipeline = [
    "google-api-python-client>=2.100.0",
    "yt-dlp>=2024.3.10",
    "textstat>=0.7.3",
]

[tool.setuptools]
# 显式包：避免 setuptools 把 deploy/ scripts/ cdn-staging/ 当成 Python 包
packages = ["app", "app.api"]

[tool.ruff]
line-length = 100
target-version = "py311"
